# khasahi-

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/v1/endpoints/: health.py  profile.py  scans.py
backend/app/core/: config.py  security.py
backend/app/database/: __init__.py
backend/app/models/: __init__.py
backend/app/prompts/: __init__.py  personalization_contract.md
backend/app/schemas/: auth.py  common.py  personalization.py  profile.py  scan.py
backend/app/services/: openai_service.py  supabase_service.py
backend/app/utils/: ids.py
docs/01-product/: PRD.md  Personas.md  UX-Blueprint.md  User-Flows.md
docs/02-design/: Animations.md  Components.md  Design-System.md
docs/03-engineering/: API-Spec.md  Architecture.md  Database.md  Folder-Structure.md
docs/04-ai/: AI-Personalization.md  Ingredient-Analysis.md  Prompt-Engineering.md
docs/05-release/: Demo-Script.md  Roadmap.md
infra/railway/: railway.json
mobile/: .env.example  app.json  babel.config.js  index.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
mobile/__mocks__/: react-native-mmkv.js
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/ios/: Podfile  link-assets-manifest.json
mobile/ios/KhasahiAI/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
mobile/ios/KhasahiAI.xcodeproj/: project.pbxproj
shared/: package.json  tsconfig.json
shared/src/: index.ts
(+168 files in other folders)
